--- a/app/static/index.html
+++ b/app/static/index.html
@@ -107,8 +107,10 @@ function upload(blob) {
 </script>
 <style>
     img {
-        width: 50px;
-        height: 50px;
+        /* width: 50px;
+        height: 50px; */
+        width: 100%;
+        padding:5px;
         display: block;
     }
 </style>
