--- a/app/static/index.html
+++ b/app/static/index.html
@@ -11,7 +11,7 @@ function upload(blob) {
     let auth = document.getElementById('auth').value
     formData.append('auth',auth)
     formData.append('file', blob)
-    fetch('http://localhost:8080/api/file/upload', { method: 'POST', body: formData })
+    fetch('http://' + hostname + ':8080/api/file/upload', { method: 'POST', body: formData })
 }
 
 // 监听图片输入
