--- a/app/static/index.html
+++ b/app/static/index.html
@@ -1,4 +1,6 @@
-<head></head>
+<head>
+<meta http-equiv="content-type" content="text/html;charset=utf-8">
+</head>
 <body>
 <script>
 let hostname = location.hostname
